--- a/src/CSS_Files/menu.css
+++ b/src/CSS_Files/menu.css
@@ -1,5 +1,5 @@
 #anPane{
-    -fx-background-color: #333;
+    -fx-background-image: url(background.jpg);
 
 }
 #title{
@@ -7,11 +7,20 @@
 }
 
 .button{
-    -fx-background-color: #eaa000;
+
     -fx-text-fill:#000;
-    -fx-pref-width: 150px;
-    -fx-pref-height: 70px;
+    -fx-pref-width: 250px;
+    -fx-pref-height: 100px;
+    -fx-background-color:
+            linear-gradient(#f2f2f2, #d6d6d6),
+            linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%),
+            linear-gradient(#dddddd 0%, #f6f6f6 50%);
+    -fx-background-radius: 8,7,6;
+    -fx-background-insets: 0,1,2;
+    -fx-text-fill: black;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 }
+
 #desc{
     -fx-text-fill:#fff;
 }
